fixed the randomChar component bug with jumping block height when character load

--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -3,6 +3,7 @@
 .random-char {
     display: grid;
     grid-template-columns: repeat(2, 50%);
+    min-height: 260px;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.25);
     &__block {
         padding: 40px 35px;
